[package]
name = "haematite-consume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
futures-lite = "2.2.0"
lapin = "2.3.1"
tokio = { version = "1.35.1", features = ["full"] }
